# rust_portal

./: .gitignore  Cargo.toml  rustfmt.toml
engine/: Cargo.toml
engine/src/: camera.rs  hecs_extension.rs  lib.rs  main.rs  shader.wgsl  transform.rs
engine/src/renderer/: material.rs  mesh.rs  mod.rs  shader.rs  texture.rs
engine/src/resource_manager/: mod.rs  texture.rs
game/: Cargo.toml
game/src/: main.rs  shader.wgsl
resources/crytek-sponza-huge-vray-obj/: crytek-sponza-huge-vray.mtl
src/: main.rs
