[package]
name = "portal_engine"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.8"
winit = "0.25"
nalgebra = "0.26"
smallvec = { version = "1.6", features = ["const_generics"] }
bytemuck = { version = "1.5", features = ["derive"] }
legion = "0.4.0"
approx = "0.4"
