[package]
name = "portal_game"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portal_engine = { path = "../engine" }
wgpu = "0.8"
winit = "0.25"
rust-embed = "5.8"
pollster = "0.2"
nalgebra = "0.26"
smallvec = { version = "1.6", features = ["const_generics"] }
bytemuck = { version = "1.5", features = ["derive"] }
tobj = "3.0"
